; ModuleID = '/home/carl/AnghaBench/tig/src/extr_graph-v2.c_new_column.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_graph-v2.c_new_column.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.graph_row = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.graph_row*, %struct.graph_row*, i32)* @new_column to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @new_column(%struct.graph_row* %0, %struct.graph_row* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.graph_row*, align 8
  %6 = alloca %struct.graph_row*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.graph_row* %0, %struct.graph_row** %5, align 8
  store %struct.graph_row* %1, %struct.graph_row** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.graph_row*, %struct.graph_row** %6, align 8
  %10 = getelementptr inbounds %struct.graph_row, %struct.graph_row* %9, i32 0, i32 1
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = load i32, i32* %7, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i64 %13
  %15 = call i32 @graph_column_has_commit(%struct.TYPE_2__* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %50

18:                                               ; preds = %3
  %19 = load i32, i32* %7, align 4
  store i32 %19, i32* %8, align 4
  br label %20

20:                                               ; preds = %46, %18
  %21 = load i32, i32* %8, align 4
  %22 = load %struct.graph_row*, %struct.graph_row** %5, align 8
  %23 = getelementptr inbounds %struct.graph_row, %struct.graph_row* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = icmp slt i32 %21, %24
  br i1 %25, label %26, label %49

26:                                               ; preds = %20
  %27 = load %struct.graph_row*, %struct.graph_row** %5, align 8
  %28 = getelementptr inbounds %struct.graph_row, %struct.graph_row* %27, i32 0, i32 1
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = load i32, i32* %7, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load %struct.graph_row*, %struct.graph_row** %6, align 8
  %36 = getelementptr inbounds %struct.graph_row, %struct.graph_row* %35, i32 0, i32 1
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** %36, align 8
  %38 = load i32, i32* %8, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %40, i32 0, i32 0
  %42 = load i64, i64* %41, align 8
  %43 = icmp eq i64 %34, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %26
  store i32 0, i32* %4, align 4
  br label %50

45:                                               ; preds = %26
  br label %46

46:                                               ; preds = %45
  %47 = load i32, i32* %8, align 4
  %48 = add nsw i32 %47, 1
  store i32 %48, i32* %8, align 4
  br label %20

49:                                               ; preds = %20
  store i32 1, i32* %4, align 4
  br label %50

50:                                               ; preds = %49, %44, %17
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local i32 @graph_column_has_commit(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
